@@ -7,6 +7,7 @@ Bug fixes:
  * Build fixes
 
 New features:
+ * User defined shortcuts to arbitrary programs
  * Updated help docs
  * New or updated translations: cs, de, es
  * New key bindings:
